# th-reify-many

./: .gitignore  .project-settings.yml  .travis.yml  ChangeLog.md  README.md  stack.yaml  th-reify-many.cabal  th-transitive.cabal
.github/workflows/: haskell-ci.yml
src/: Main.hs  Transitive.hs
src/Language/Haskell/TH/: ReifyMany.hs  Transitive.hs
src/Language/Haskell/TH/ReifyMany/: Internal.hs
src/Language/Haskell/TH/Transitive/: Internal.hs
tests/: Main.hs
